Updated logic for creating a playlist, playlist is now stored in database